Update Entrepreneurship Development Club.html

--- a/Entrepreneurship Development Club.html
+++ b/Entrepreneurship Development Club.html
@@ -41,7 +41,9 @@
 
   <p>To create awareness about entrepreneurship as a career option. To develop skills among students and support them in turning ideas into startups.</p>
 
-  <img src="images (1).jpg" alt="Entrepreneurship ideas">
+   <img src="D:\ADD programs\enterpernership.jpg" alt="Entrepreneurship ideas">
+
+
 
   <p>Opportunity to learn directly from entrepreneurs. Developing leadership, risk-taking, and problem-solving skills.</p>
 
@@ -53,3 +55,4 @@
 </body>
 
 </html>  
+
